--- a/src/app/charts/transaction-summary/transaction-summary.component.html
+++ b/src/app/charts/transaction-summary/transaction-summary.component.html
@@ -1,12 +1,12 @@
 <div inViewport (inside)="fetch()" class="dashboard__chart" [class.dashboard__chart--embedded]="embedded">
   <div *ngIf="!embedded" class="dashboard__chart__title">
-    <div class="dashboard__chart__title__main">Transactions</div>
-    <div class="dashboard__chart__title__sub">transactions summary</div>
+    <div class="dashboard__chart__title__main">{{'DASHBOARD_TRANSACTIONSUMMARY_TITLE' | translate}}</div>
+    <div class="dashboard__chart__title__sub">{{'DASHBOARD_TRANSACTIONSUMMARY_SUBTITLE' | translate}}</div>
     <md-icon [md-menu-trigger-for]="downloadOptions">more_vert</md-icon>
     <md-menu #downloadOptions="mdMenu" x-position="before">
-      <button md-menu-item (click)="download('json')"> Download JSON </button>
-      <button md-menu-item (click)="download('csv')"> Download CSV </button>
-      <button md-menu-item (click)="download('excel')"> Download Excel </button>
+      <button md-menu-item (click)="download('json')">{{'CHART_DOWNLOADJSON' | translate}}</button>
+      <button md-menu-item (click)="download('csv')">{{'CHART_DOWNLOADCSV' | translate}}</button>
+      <button md-menu-item (click)="download('excel')">{{'CHART_DOWNLOADEXCEL' | translate}}</button>
     </md-menu>
   </div>
 
@@ -16,10 +16,10 @@
     <div [class.invisible]="!loaded || (!summaries || summaries.length === 0)">
       <chart style="display: block" type="StockChart" [options]="chartOptions" (load)="saveChart($event.context)"></chart>
     </div>
-    <div class="dashboard__table-chart__no-data" *ngIf="loaded && (!summaries || summaries.length === 0)"> No Transactions Found</div>
+    <div class="dashboard__table-chart__no-data" *ngIf="loaded && (!summaries || summaries.length === 0)">{{'DASHBOARD_TRANSACTIONSUMMARY_NODATA' | translate}}</div>
     <chart *ngIf="!loaded" style="display: block" [options]="loaderOptions"></chart>
 
-    <div *ngIf="!embedded" class="dashboard__table-chart__actions"><span [routerLink]="['/reports', 'transaction']">VIEW MORE</span></div>
+    <div *ngIf="!embedded" class="dashboard__table-chart__actions"><span [routerLink]="['/reports', 'transaction']">{{'CHART_VIEWMORE' | translate}}</span></div>
   </ng-template>
 
 </div>
