--- a/src/app/pages/dashboard-page/events-summary/events-summary.component.html
+++ b/src/app/pages/dashboard-page/events-summary/events-summary.component.html
@@ -1,12 +1,12 @@
 <div inViewport (inside)="fetch()" class="dashboard__chart">
   <div class="dashboard__chart__title">
-    <div class="dashboard__chart__title__main">Events</div>
-    <div class="dashboard__chart__title__sub">events summary</div>
+    <div class="dashboard__chart__title__main">{{'DASHBOARD_EVENTSUMMARY_TITLE' | translate}}</div>
+    <div class="dashboard__chart__title__sub">{{'DASHBOARD_EVENTSUMMARY_SUBTITLE' | translate}}</div>
     <md-icon [md-menu-trigger-for]="downloadOptions">more_vert</md-icon>
     <md-menu #downloadOptions="mdMenu" x-position="before">
-      <button md-menu-item (click)="download('json')"> Download JSON </button>
-      <button md-menu-item (click)="download('csv')"> Download CSV </button>
-      <button md-menu-item (click)="download('excel')"> Download Excel </button>
+      <button md-menu-item (click)="download('json')">{{'CHART_DOWNLOADJSON' | translate}}</button>
+      <button md-menu-item (click)="download('csv')">{{'CHART_DOWNLOADCSV' | translate}}</button>
+      <button md-menu-item (click)="download('excel')">{{'CHART_DOWNLOADEXCEL' | translate}}</button>
     </md-menu>
   </div>
 
@@ -17,9 +17,9 @@
       <chart #chartI [options]="options" (load)="loadChart(chartI)"></chart>
     </div>
 
-    <div class="dashboard__table-chart__no-data" *ngIf="loaded && (!events || events.length === 0)"> No Events Found</div>
+    <div class="dashboard__table-chart__no-data" *ngIf="loaded && (!events || events.length === 0)">{{'DASHBOARD_EVENTSUMMARY_NODATA' | translate}}</div>
     <chart *ngIf="!loaded" [options]="loaderOptions"></chart>
 
-    <div class="dashboard__table-chart__actions"><span [routerLink]="['/coming-soon']">VIEW MORE</span></div>
+    <div class="dashboard__table-chart__actions"><span [routerLink]="['/coming-soon']">{{'CHART_VIEWMORE' | translate}}</span></div>
   </ng-template>
 </div>
