--- a/src/app/pages/dashboard-page/transaction-by/transaction-by.component.html
+++ b/src/app/pages/dashboard-page/transaction-by/transaction-by.component.html
@@ -1,12 +1,12 @@
 <div inViewport (inside)="fetch()" class="dashboard__table-chart">
   <div class="dashboard__table-chart__title">
-    <div class="dashboard__table-chart__title__main">Transactions by Affiliate</div>
-    <div class="dashboard__table-chart__title__sub">Transactions from top Affiliates</div>
+    <div class="dashboard__table-chart__title__main">{{'DASHBOARD_TRANSACTIONBYAFFILIATE_TITLE' | translate}}</div>
+    <div class="dashboard__table-chart__title__sub">{{'DASHBOARD_TRANSACTIONBYAFFILIATE_SUBTITLE' | translate}}</div>
     <md-icon [md-menu-trigger-for]="downloadOptions">more_vert</md-icon>
     <md-menu #downloadOptions="mdMenu" x-position="before">
-      <button md-menu-item (click)="download('json')"> Download JSON </button>
-      <button md-menu-item (click)="download('csv')"> Download CSV </button>
-      <button md-menu-item (click)="download('excel')"> Download Excel </button>
+      <button md-menu-item (click)="download('json')">{{'CHART_DOWNLOADJSON' | translate}}</button>
+      <button md-menu-item (click)="download('csv')">{{'CHART_DOWNLOADCSV' | translate}}</button>
+      <button md-menu-item (click)="download('excel')">{{'CHART_DOWNLOADEXCEL' | translate}}</button>
     </md-menu>
   </div>
   <server-error-message (refresh)="refreshData()" *ngIf="serverError; else data"></server-error-message>
@@ -19,11 +19,11 @@
       <table class="highlight">
         <thead>
         <tr>
-          <th>Affiliate</th>
-          <th class="cell--align-right">Count</th>
-          <th class="cell--align-right">Count %</th>
-          <th class="cell--align-right">Amount</th>
-          <th class="cell--align-right">Amount %</th>
+          <th>{{'DASHBOARD_TRANSACTIONBYAFFILIATE_AFFILIATE' | translate}}</th>
+          <th class="cell--align-right">{{'DASHBOARD_TRANSACTIONBYAFFILIATE_COUNT' | translate}}</th>
+          <th class="cell--align-right">{{'DASHBOARD_TRANSACTIONBYAFFILIATE_COUNTP' | translate}}</th>
+          <th class="cell--align-right">{{'DASHBOARD_TRANSACTIONBYAFFILIATE_AMOUNT' | translate}}</th>
+          <th class="cell--align-right">{{'DASHBOARD_TRANSACTIONBYAFFILIATE_AMOUNTP' | translate}}</th>
         </tr>
         </thead>
         <tbody *ngIf="transactionBy">
@@ -39,12 +39,12 @@
     </div>
 
     <ng-template #transactionByNoData>
-      <div *ngIf="transactionBy" class="dashboard__table-chart__no-data"> No Transactions Found</div>
+      <div *ngIf="transactionBy" class="dashboard__table-chart__no-data">{{'DASHBOARD_TRANSACTIONBYAFFILIATE_NODATA' | translate}}</div>
     </ng-template>
 
     <div class="dashboard__table-chart__actions dashboard__table-chart__actions--no-border">
-      <span *ngIf="transactionBy && transactionBy.count > 0" (click)="toggleTable()">{{showTable ? 'COLLAPSE' : 'SHOW TABLE'}}</span>
-      <span [routerLink]="['/coming-soon']">VIEW MORE</span>
+      <span *ngIf="transactionBy && transactionBy.count > 0" (click)="toggleTable()">{{(showTable ? 'CHART_COLLAPSE' : 'CHART_SHOWTABLE') | translate}}</span>
+      <span [routerLink]="['/coming-soon']">{{'CHART_VIEWMORE' | translate}}</span>
     </div>
 
   </ng-template>
