--- a/src/app/reports/affiliate-report/affiliate-report.component.html
+++ b/src/app/reports/affiliate-report/affiliate-report.component.html
@@ -1,4 +1,4 @@
-<div class="report__title">Affiliates Report</div>
+<div class="report__title">{{'AFFILIATEREPORT_TITLE' | translate}}</div>
 
 <div class="filter-container">
   <advanced-filter
@@ -32,7 +32,7 @@
 </table-memory>
 
 <report-table
-  [title]="'Affiliates Summary Details'"
+  [title]="'AFFILIATEREPORT_TABLETITLE' | translate"
   [data]="reportsToDisplay"
   [columnParams]="columnParams"
   [limit]="limit"
