--- a/src/app/pages/fulfillment-providers/fulfillment-provider-view/fulfillment-provider-add-new/fulfillment-provider-add-new.component.html
+++ b/src/app/pages/fulfillment-providers/fulfillment-provider-view/fulfillment-provider-add-new/fulfillment-provider-add-new.component.html
@@ -10,37 +10,36 @@
   </div>
 
   <form class="entity-view__card__content" #inputForm="ngForm">
-    <dropdown-component [required]="true" [disabled]="false" [placeholder]="'Provider'" [selected]="entity.provider"></dropdown-component>
+    <dropdown-component [class.error]="formInvalid && !entity.provider.name" [required]="true" [disabled]="mode === modes.View" [placeholder]="'Provider'" [selected]="entity.provider.name" [options]="['Hashtag', 'ThreePL']" (onSelect)="entity.provider.name = $event"></dropdown-component>
 
     <md-input-container [class.error]="formInvalid && !entity.name" class="entity-view__card__content__item">
       <input required md-input [disabled]="mode === modes.View" placeholder="Name" [(ngModel)]="entity.name" name="name" type="text">
     </md-input-container>
 
-    <md-input-container [class.error]="formInvalid && !entity.username" class="entity-view__card__content__item">
-      <input required md-input [disabled]="mode === modes.View" placeholder="Username" [(ngModel)]="entity.username" name="username" type="text">
+    <md-input-container *ngIf="entity.provider.name" [class.error]="formInvalid && !entity.provider.username" class="entity-view__card__content__item">
+      <input required md-input [disabled]="mode === modes.View" placeholder="Username" [(ngModel)]="entity.provider.username" name="username" type="text">
     </md-input-container>
 
-    <md-input-container [class.error]="formInvalid && !entity.password" class="entity-view__card__content__item">
-      <input required md-input [disabled]="mode === modes.View" placeholder="Password" [(ngModel)]="entity.password" name="password" type="text">
+    <md-input-container *ngIf="entity.provider.name" [class.error]="formInvalid && !entity.provider.password" class="entity-view__card__content__item">
+      <input required md-input [disabled]="mode === modes.View" placeholder="Password" [(ngModel)]="entity.provider.password" name="password" type="text">
     </md-input-container>
 
-    <md-input-container [class.error]="formInvalid && !entity.threePLKey" class="entity-view__card__content__item">
-      <input required md-input [disabled]="mode === modes.View" placeholder="ThreePL Key" [(ngModel)]="entity.threePLKey" name="threeplKey" type="text">
+    <md-input-container *ngIf="entity.provider.name" [class.error]="formInvalid && !entity.provider.threeplKey" class="entity-view__card__content__item">
+      <input required md-input [disabled]="mode === modes.View" placeholder="ThreePL Key" [(ngModel)]="entity.provider.threeplKey" name="threeplKey" type="text">
     </md-input-container>
 
-    <md-input-container [class.error]="formInvalid && !entity.facilityId" class="entity-view__card__content__item">
-      <input required md-input [disabled]="mode === modes.View" placeholder="Facility ID" [(ngModel)]="entity.facilityId" name="facilityId" type="text">
+    <md-input-container *ngIf="entity.provider.name === 'ThreePL'" [class.error]="formInvalid && (!entity.provider.threeplFacilityId && entity.provider.threeplFacilityId !== 0)" class="entity-view__card__content__item">
+      <input md-input [disabled]="mode === modes.View" (keydown)="isNumeric($event)" placeholder="Facility ID" [(ngModel)]="entity.provider.threeplFacilityId" name="facilityId" type="text">
     </md-input-container>
 
-    <md-input-container [class.error]="formInvalid && !entity.threePLId" class="entity-view__card__content__item">
-      <input required md-input [disabled]="mode === modes.View" placeholder="ThreePL ID" [(ngModel)]="entity.threePLId" name="threeplId" type="text">
+    <md-input-container *ngIf="entity.provider.name === 'ThreePL'" [class.error]="formInvalid && (!entity.provider.threeplId && entity.provider.threeplId !== 0)" class="entity-view__card__content__item">
+      <input required md-input [disabled]="mode === modes.View" (keydown)="isNumeric($event)" placeholder="ThreePL ID" [(ngModel)]="entity.provider.threeplId" name="threeplId" type="text">
     </md-input-container>
 
-    <md-input-container [class.error]="formInvalid && !entity.customerId" class="entity-view__card__content__item">
-      <input required md-input [disabled]="mode === modes.View" placeholder="Customer ID" [(ngModel)]="entity.customerId" name="customerId" type="text">
+    <md-input-container *ngIf="entity.provider.name" [class.error]="formInvalid && (!entity.provider.threeplCustomerId && entity.provider.threeplCustomerId !==0)" class="entity-view__card__content__item">
+      <input required md-input [disabled]="mode === modes.View" (keydown)="isNumeric($event)" placeholder="Customer ID" [(ngModel)]="entity.provider.threeplCustomerId" name="customerId" type="text">
     </md-input-container>
 
-    <md-textarea [disabled]="mode === modes.View" [class.error]="formInvalid && !entity.returnAddress" class="entity-view__card__content__item" required [(ngModel)]="entity.returnAddress" name="returnAddress" placeholder="Return Address"></md-textarea>
   </form>
 
   <div *ngIf="mode !== modes.View" class="entity-view__card__actions">
