--- a/src/app/pages/components/table-memory/table-memory.component.html
+++ b/src/app/pages/components/table-memory/table-memory.component.html
@@ -28,9 +28,14 @@
     <tr *ngFor="let entity of entities | filterEntitiesByParams: columnParams: filterString | sortEntities: sortedColumnParams.mappingFunction: sortedColumnParams.sortOrder">
       <td *ngFor="let params of columnParams" [class.cell--align-right]="params.align === 'right'" (click)="view.emit(entity)">
         <div class="codeblock" *ngIf="params.code; else noCode">
-          {{params.mappingFunction(entity) | translate}}
+          {{params.mappingFunction(entity)}}
         </div>
-        <ng-template #noCode>{{params.mappingFunction(entity)}}</ng-template>
+        <ng-template #noCode>
+          <div class="flex-custom flex-custom--center">
+            {{params.mappingFunction(entity)}}
+            <md-icon *ngIf="params.copy" class="copy-icon" md-tooltip="Copy to clipboard" ngxClipboard [cbContent]="params.mappingFunction(entity)">content_copy</md-icon>
+          </div>
+        </ng-template>
       </td>
       <td *ngIf="showMenuOptions">
         <md-icon [md-menu-trigger-for]="actionsMenu">more_vert</md-icon>
