--- a/src/app/pages/rebills-page/rebill-view/rebill-view.component.html
+++ b/src/app/pages/rebills-page/rebill-view/rebill-view.component.html
@@ -19,6 +19,7 @@
 
   <div class="entity-view__navigation">
     <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 0" (click)="setIndex(0)">GENERAL DETAILS</span>
+    <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 1" (click)="setIndex(1)">SHIPPING RECEIPTS</span>
   </div>
 
   <md-tab-group [(selectedIndex)]="selectedIndex">
@@ -44,7 +45,7 @@
           </md-input-container>
 
           <md-input-container class="entity-view__card__content__item">
-            <input disabled md-input placeholder="Parent Session" [(ngModel)]="parentsession" type="text">
+            <input disabled md-input placeholder="Parent Session" [(ngModel)]="entity.parentSession.id" type="text">
           </md-input-container>
 
           <md-input-container class="entity-view__card__content__item">
@@ -53,6 +54,19 @@
         </div>
       </div>
 
+    </md-tab>
+
+    <md-tab>
+      <table-memory
+        [data]="entity.shippingReceipts"
+        [columnParams]="shippingReceiptColumnParams"
+        [textOptions]="shippingReceiptText"
+        [associationEnabled]="false"
+        [editEnabled]="false"
+        [viewEnabled]="false"
+        [dissociationEnabled]="false"
+        [showMenuOptions]="false">
+      </table-memory>
     </md-tab>
   </md-tab-group>
 </div>
