Redesign transactions spe

--- a/src/app/pages/components/table-memory/table-memory.component.html
+++ b/src/app/pages/components/table-memory/table-memory.component.html
@@ -31,7 +31,7 @@
           {{params.mappingFunction(entity)}}
         </div>
         <ng-template #noCode>
-          <div class="flex-custom flex-custom--center">
+          <div [class.flex-custom]="params.copy" [class.flex-custom--center]="params.copy">
             {{params.mappingFunction(entity)}}
             <md-icon *ngIf="params.copy" class="copy-icon" md-tooltip="Copy to clipboard" ngxClipboard [cbContent]="params.mappingFunction(entity)">content_copy</md-icon>
           </div>
